--- a/index.html
+++ b/index.html
@@ -1,36 +1,69 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>國立花蓮高級中學班聯會</title>
-    <link rel = "stylesheet" href = "style.css"> <!-- 引用style.css的設計美化網頁 -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>花中班聯會官方網站</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-    <header>
 
-        <h1 style="color: white;">國立花蓮高級中學班聯會</h1>
-        <nav class="menu">
+<body>
+    <div class="top-layer">
+        <header>
+        <h1>
+            <img src="/images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
+            花中班聯會官方網站
+        </h1>
+        <nav>
             <ul>
-                <li><a href="#">首頁</a></li>
-                <li><a href="#">聯絡我們</a></li>
-                <li><a href="#">活動資訊</a></li>
+                <li><a href="index.html">首頁</a></li>
+                <li><a href="about.html">關於我們</a></li>
+                <li><a href="events.html">活動資訊</a></li>
+                <li><a href="contact.html">聯絡我們</a></li>
             </ul>
         </nav>
-    </header>
-    <main>
-    <section class="front-page">
-        <h2>關於班聯會</h2>
-        <img src="/images/506305024_2179903385804101_4573402478799226709_n.jpg">
-        
-    </section>
-    </main>
+        </header>
+
+        <main>
+            <section id="welcome" class="welcome">
+            <h2>歡迎來到花中班聯會</h2>
+            </section>
+        </main>
+    </div>
+
+    <div class="news-wrapper">
+        <div class="news-header">
+            <h2>最新消息</h2>
+        </div>
+
+        <section id="news-container">
+        <div class="news-content">
+            <ul>
+                <li>
+                <div class="news-item">
+                <span>暫無消息</span>
+                </div>
+                </li>
+            </ul>
+        </div>
+        </section>
+    </div>
+
     <footer>
-        <p>
-            <a href="https://www.instagram.com/114_hlhs_candidate/">
-            <button class="go_ig">ig</button>
-            </a>
-        </p>
-    </footer>
-</body>
-</html>
+  <div class="footer-container">
+    <div class="footer-section">
+      <h3>相關網站</h3>
+      <ul>
+        <li><a href="https://www.hlhs.hlc.edu.tw/" target="_blank">花蓮高中官方網站</a></li>
+        <li><a href="https://www.instagram.com/hlhssc/" target="_blank">花中班聯會 Instagram</a></li>
+        <li><a href="https://www.facebook.com/hlhssc/" target="_blank">花中班聯會 Facebook</a></li>
+      </ul>
+    </div>
+    <div class="footer-section">
+      <h3>聯絡我們</h3>
+      <p>電子郵件：<a href="mailto:hlhssc@gmail.com">hlhssc@gmail.com</a></p>
+      <p>地址：花蓮縣花蓮市民權路42號</p>
+    </div>
+  </div>
+  
+</footer>
