--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-layer">
         <header>
         <h1>
-            <img src="/images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
+            <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
             花中班聯會官方網站
         </h1>
         <nav>
@@ -66,4 +66,5 @@
   </div>
   
 </footer>
+
 
