--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="top-layer">
+      <img src="images/HLHS_2.jpg" alt="花蓮高中學校外景" class="hero-background-image" />
         <header>
         <h1>
             <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
@@ -66,5 +67,6 @@
   </div>
   
 </footer>
+
 
 
