--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="top-layer">
+      <img src="images/HLHS_2.jpg" alt="花蓮高中學校外景" class="hero-background-image" />
         <header>
         <h1>
             <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
@@ -141,3 +142,4 @@
   
 
 </footer>
+
