--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="site-container">
     <header>
       <h1>
-        <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" style="height: 70%; "/>
+        <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
         花中班聯會官方網站
       </h1>
       <nav>
@@ -68,4 +68,5 @@
     <img src="images/HLHS_2.jpg" alt="花蓮高中學校外景" class="hero-background-image" />
 </body>
 </html>
+
 
