--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
       <h3>相關網站</h3>
       <ul>
         <li><a href="https://www.hlhs.hlc.edu.tw/" target="_blank">花蓮高中官方網站</a></li>
-        <li><a href="https://www.instagram.com/hlhssc/" target="_blank">花中班聯會 Instagram</a></li>
+        <li><a href="https://www.instagram.com/hlhs_student.union?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">花中班聯會 Instagram</a></li>
       </ul>
     </div>
     <div class="footer-section">
@@ -141,3 +141,4 @@
   
 
 </footer>
+
