--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <ul>
                 <li>
                 <div class="news-item">
-                <span>暫無消息</span>
+                <span>新生訊息：8/26、8/27是新生訓練，請新生們不要遲到喔ovob</span>
                 </div>
                 </li>
             </ul>
@@ -67,4 +67,5 @@
   
 
 </footer>
+
 
