--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <ul>
                 <li>
                 <div class="news-item">
-                <span>新生訊息：8/26、8/27是新生訓練，請新生們不要遲到喔ovob</span>
+                  <h3 class="news-title">新生訊息</h3>
+                  <p class="news-text">>新生訊息：8/26、8/27是新生訓練，請新生們不要遲到喔ovob</p>
                 </div>
                 </li>
             </ul>
@@ -67,5 +68,6 @@
   
 
 </footer>
+
 
 
