--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li>
                 <div class="news-item">
                   <h3 class="news-title">新生訊息</h3>
-                  <p class="news-text">新生訊息：8/26、8/27是新生訓練，請新生們不要遲到喔ovob</p>
+                  <p class="news-text">8/26、8/27是新生訓練，請新生們不要遲到喔ovob</p>
                 </div>
                 </li>
             </ul>
@@ -68,6 +68,7 @@
   
 
 </footer>
+
 
 
 
