--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="Fp-sTEtzej08slfQfu9x8Bzy-Vmh2Pi2GlI6PlkcnSs" />
   <title>花中班聯會官方網站</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -68,6 +69,7 @@
   
 
 </footer>
+
 
 
 
