--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@
     <div class="top-layer">
         <header>
         <h1>
-            <img src="\images\Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
+            <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
             花中班聯會官方網站
         </h1>
         <!-- Hamburger icon for mobile navigation -->
@@ -129,4 +129,5 @@
 </script>
 </body>
 </html>
+
 
