--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
     </div>
     <div class="team-member leader">
       <h3>班聯會副會長</h3>
-      <p>林彥理</p>
+      <p>林晨裡</p>
     </div>
   </div>
 
@@ -176,5 +176,6 @@
 </script>
 </body>
 </html>
+
 
 
