--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>花中班聯會官方網站</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Font Awesome for hamburger icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -16,11 +15,9 @@
             <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
             花中班聯會官方網站
         </h1>
-        <!-- Hamburger icon for mobile navigation -->
         <button class="hamburger" id="hamburger">
             <i class="fas fa-bars"></i>
         </button>
-        <!-- Mobile navigation drawer -->
         <nav class="mobile-nav" id="mobile-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -29,7 +26,6 @@
                 <li><a href="contact.html">聯絡我們</a></li>
             </ul>
         </nav>
-        <!-- Desktop navigation -->
         <nav class="desktop-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -64,24 +60,25 @@
             </ul>
         </div>
         </section>
-    </div>
+        
+        <footer>
+          <div class="footer-container">
+            <div class="footer-section">
+              <h3>相關網站</h3>
+              <ul>
+                <li><a href="https://www.hlhs.hlc.edu.tw/" target="_blank">花蓮高中官方網站</a></li>
+                <li><a href="https://www.instagram.com/hlhssc/" target="_blank">花中班聯會 Instagram</a></li>
+              </ul>
+            </div>
+            <div class="footer-section">
+              <h3>聯絡我們</h3>
+              <p>電子郵件：<a href="mailto:hlhssc@gmail.com">ofstud09@hlhs.hlc.edu.tw</a></p>
+              <p>地址：花蓮縣花蓮市民權路42號</p>
+            </div>
+          </div>
+        </footer>
 
-    <footer>
-  <div class="footer-container">
-    <div class="footer-section">
-      <h3>相關網站</h3>
-      <ul>
-        <li><a href="https://www.hlhs.hlc.edu.tw/" target="_blank">花蓮高中官方網站</a></li>
-        <li><a href="https://www.instagram.com/hlhssc/" target="_blank">花中班聯會 Instagram</a></li>
-      </ul>
     </div>
-    <div class="footer-section">
-      <h3>聯絡我們</h3>
-      <p>電子郵件：<a href="mailto:hlhssc@gmail.com">hlhssc@gmail.com</a></p>
-      <p>地址：花蓮縣花蓮市民權路42號</p>
-    </div>
-  </div>
-</footer>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -104,5 +101,3 @@
 </script>
 </body>
 </html>
-
-
