--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>花中班聯會官方網站</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -14,7 +15,18 @@
             <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
             花中班聯會官方網站
         </h1>
-        <nav>
+        <button class="hamburger" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </button>
+        <nav class="mobile-nav" id="mobile-nav">
+            <ul>
+                <li><a href="index.html">首頁</a></li>
+                <li><a href="about.html">關於我們</a></li>
+                <li><a href="events.html">活動資訊</a></li>
+                <li><a href="contact.html">聯絡我們</a></li>
+            </ul>
+        </nav>
+        <nav class="desktop-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
                 <li><a href="about.html">關於我們</a></li>
@@ -39,7 +51,7 @@
         <div class="contact-details">
           <div class="contact-item">
             <h3>電子郵件</h3>
-            <p><a href="mailto:hlhssc@gmail.com">hlhssc@gmail.com</a></p>
+            <p><a href="mailto:>ofstud09@hlhs.hlc.edu.tw">>ofstud09@hlhs.hlc.edu.tw</a></p>
           </div>
           <div class="contact-item">
             <h3>地址</h3>
@@ -72,11 +84,28 @@
         </div>
         <div class="footer-section">
           <h3>聯絡我們</h3>
-          <p>電子郵件：<a href="mailto:hlhssc@gmail.com">hlhssc@gmail.com</a></p>
+          <p>電子郵件：<a href="mailto:hlhssc@gmail.com">>ofstud09@hlhs.hlc.edu.tw</a></p>
           <p>地址：花蓮縣花蓮市民權路42號</p>
         </div>
       </div>
     </footer>
-</body>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const hamburger = document.getElementById('hamburger');
+        const mobileNav = document.getElementById('mobile-nav');
 
+        hamburger.addEventListener('click', function() {
+            mobileNav.classList.toggle('open');
+            hamburger.classList.toggle('is-active');
+        });
+
+        mobileNav.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', () => {
+                mobileNav.classList.remove('open');
+                hamburger.classList.remove('is-active');
+            });
+        });
+    });
+</script>
+</body>
 </html>
