--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>花中班聯會官方網站</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Font Awesome for hamburger icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -15,9 +16,11 @@
             <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
             花中班聯會官方網站
         </h1>
+        <!-- Hamburger icon for mobile navigation -->
         <button class="hamburger" id="hamburger">
             <i class="fas fa-bars"></i>
         </button>
+        <!-- Mobile navigation drawer -->
         <nav class="mobile-nav" id="mobile-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -26,6 +29,7 @@
                 <li><a href="contact.html">聯絡我們</a></li>
             </ul>
         </nav>
+        <!-- Desktop navigation -->
         <nav class="desktop-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -41,6 +45,7 @@
             <h2>歡迎來到花中班聯會</h2>
             </section>
         </main>
+    </div>
 
     <main class="contact-page">
       <section class="contact-info">
@@ -51,7 +56,7 @@
         <div class="contact-details">
           <div class="contact-item">
             <h3>電子郵件</h3>
-            <p><a href="mailto:>ofstud09@hlhs.hlc.edu.tw">>ofstud09@hlhs.hlc.edu.tw</a></p>
+            <p><a href="mailto:hlhssc@gmail.com">hlhssc@gmail.com</a></p>
           </div>
           <div class="contact-item">
             <h3>地址</h3>
@@ -84,7 +89,7 @@
         </div>
         <div class="footer-section">
           <h3>聯絡我們</h3>
-          <p>電子郵件：<a href="mailto:hlhssc@gmail.com">>ofstud09@hlhs.hlc.edu.tw</a></p>
+          <p>電子郵件：<a href="mailto:ofstud09@hlhs.hlc.edu.tw">ofstud09@hlhs.hlc.edu.tw</a></p>
           <p>地址：花蓮縣花蓮市民權路42號</p>
         </div>
       </div>
