--- a/events.html
+++ b/events.html
@@ -104,7 +104,7 @@
         </div>
         <div class="footer-section">
           <h3>聯絡我們</h3>
-          <p>電子郵件：<a href="mailto:>ofstud09@hlhs.hlc.edu.tw">>ofstud09@hlhs.hlc.edu.tw</a></p>
+          <p>電子郵件：<a href="mailto:ofstud09@hlhs.hlc.edu.tw">ofstud09@hlhs.hlc.edu.tw</a></p>
           <p>地址：花蓮縣花蓮市民權路42號</p>
         </div>
       </div>
@@ -129,6 +129,7 @@
 </script>
 </body>
 </html>
+
 
 
 
