--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <div class="contact-details">
           <div class="contact-item">
             <h3>電子郵件</h3>
-            <p><a href="mailto:hlhssc@gmail.com">hlhssc@gmail.com</a></p>
+            <p><a href="mailto:ofstud09@hlhs.hlc.edu.tw">ofstud09@hlhs.hlc.edu.tw</a></p>
           </div>
           <div class="contact-item">
             <h3>地址</h3>
