--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="嗨！我們是花蓮高中班聯會，在這裡你可以找到所有你需要的資訊，從校園活動到福利優惠，一手掌握最即時的學生會動態！">
   <title>花中班聯會官方網站</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Font Awesome for hamburger icon -->
@@ -104,4 +105,5 @@
 </script>
 </body>
 </html>
+
 
