--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="了解花蓮高中班聯會的使命、組織架構與現任幹部名單，我們致力於為全體學生創造更優質的校園生活。">
   <title>花中班聯會官方網站</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Font Awesome for hamburger icon -->
@@ -176,6 +177,7 @@
 </script>
 </body>
 </html>
+
 
 
 
