--- a/events.html
+++ b/events.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="查看花蓮高中班聯會最新的校園活動資訊，包括新生訓練、社團幹部培訓與敬師迎新等，不錯過任何精彩時刻！">
   <title>花中班聯會官方網站</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Font Awesome for hamburger icon -->
@@ -129,6 +130,7 @@
 </script>
 </body>
 </html>
+
 
 
 
