--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="需要聯絡花蓮高中班聯會？透過我們的電子郵件、地址或線上表單，快速取得聯繫並提出你的建議與疑問。">
   <title>花中班聯會官方網站</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Font Awesome for hamburger icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -114,4 +114,5 @@
 </script>
 </body>
 </html>
+
 
