--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="嗨！我們是花蓮高中班聯會，在這裡你可以找到所有你需要的資訊，從校園活動到福利優惠，一手掌握最即時的學生會動態！">
   <title>花中班聯會官方網站</title>
-  <link rel="stylesheet" href="style.css" />
-  <!-- Font Awesome for hamburger icon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
 </head>
 
 <body>
@@ -17,11 +19,9 @@
             <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
             花中班聯會官方網站
         </h1>
-        <!-- Hamburger icon for mobile navigation -->
         <button class="hamburger" id="hamburger">
             <i class="fas fa-bars"></i>
         </button>
-        <!-- Mobile navigation drawer -->
         <nav class="mobile-nav" id="mobile-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -30,7 +30,6 @@
                 <li><a href="contact.html">聯絡我們</a></li>
             </ul>
         </nav>
-        <!-- Desktop navigation -->
         <nav class="desktop-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -91,10 +90,9 @@
 
         hamburger.addEventListener('click', function() {
             mobileNav.classList.toggle('open');
-            hamburger.classList.toggle('is-active'); // For animation if desired
+            hamburger.classList.toggle('is-active');
         });
 
-        // Close nav when a link is clicked (optional)
         mobileNav.querySelectorAll('a').forEach(link => {
             link.addEventListener('click', () => {
                 mobileNav.classList.remove('open');
@@ -105,5 +103,3 @@
 </script>
 </body>
 </html>
-
-
