--- a/about.html
+++ b/about.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="了解花蓮高中班聯會的使命、組織架構與現任幹部名單，我們致力於為全體學生創造更優質的校園生活。">
   <title>花中班聯會官方網站</title>
-  <link rel="stylesheet" href="style.css" />
-  <!-- Font Awesome for hamburger icon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta name="description" content="了解花蓮高中班聯會的使命、組織架構與現任幹部名單，我們致力於為全體學生創造更優質的校園生活。">
+  
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
 </head>
 
 <body>
@@ -17,11 +19,9 @@
             <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
             花中班聯會官方網站
         </h1>
-        <!-- Hamburger icon for mobile navigation -->
         <button class="hamburger" id="hamburger-about">
             <i class="fas fa-bars"></i>
         </button>
-        <!-- Mobile navigation drawer -->
         <nav class="mobile-nav" id="mobile-nav-about">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -30,7 +30,6 @@
                 <li><a href="contact.html">聯絡我們</a></li>
             </ul>
         </nav>
-        <!-- Desktop navigation -->
         <nav class="desktop-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -46,7 +45,6 @@
             <h2>歡迎來到花中班聯會</h2>
             </section>
         </main>
-    </div>
 
     <main class="about-page">
   <section class="about-hero">
@@ -177,10 +175,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
