--- a/events.html
+++ b/events.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="查看花蓮高中班聯會最新的校園活動資訊，包括新生訓練、社團幹部培訓與敬師迎新等，不錯過任何精彩時刻！">
   <title>花中班聯會官方網站</title>
-  <link rel="stylesheet" href="style.css" />
-  <!-- Font Awesome for hamburger icon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta name="description" content="查看花蓮高中班聯會最新的校園活動資訊，包括新生訓練、社團幹部培訓與敬師迎新等，不錯過任何精彩時刻！">
+  
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
 </head>
 
 <body>
@@ -17,11 +19,9 @@
             <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
             花中班聯會官方網站
         </h1>
-        <!-- Hamburger icon for mobile navigation -->
         <button class="hamburger" id="hamburger-events">
             <i class="fas fa-bars"></i>
         </button>
-        <!-- Mobile navigation drawer -->
         <nav class="mobile-nav" id="mobile-nav-events">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -30,7 +30,6 @@
                 <li><a href="contact.html">聯絡我們</a></li>
             </ul>
         </nav>
-        <!-- Desktop navigation -->
         <nav class="desktop-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -46,7 +45,6 @@
             <h2>歡迎來到花中班聯會</h2>
             </section>
         </main>
-    </div>
     
     <main class="event-page">
       <section class="events-outline">
@@ -130,9 +128,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
-
