--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="需要聯絡花蓮高中班聯會？透過我們的電子郵件、地址或線上表單，快速取得聯繫並提出你的建議與疑問。">
   <title>花中班聯會官方網站</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta name="description" content="需要聯絡花蓮高中班聯會？透過我們的電子郵件、地址或線上表單，快速取得聯繫並提出你的建議與疑問。">
+  
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
 </head>
 
 <body>
@@ -16,11 +19,9 @@
             <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
             花中班聯會官方網站
         </h1>
-        <!-- Hamburger icon for mobile navigation -->
         <button class="hamburger" id="hamburger">
             <i class="fas fa-bars"></i>
         </button>
-        <!-- Mobile navigation drawer -->
         <nav class="mobile-nav" id="mobile-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -29,7 +30,6 @@
                 <li><a href="contact.html">聯絡我們</a></li>
             </ul>
         </nav>
-        <!-- Desktop navigation -->
         <nav class="desktop-nav">
             <ul>
                 <li><a href="index.html">首頁</a></li>
@@ -45,7 +45,6 @@
             <h2>歡迎來到花中班聯會</h2>
             </section>
         </main>
-    </div>
 
     <main class="contact-page">
       <section class="contact-info">
@@ -114,5 +113,3 @@
 </script>
 </body>
 </html>
-
-
