--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="嗨！我們是花蓮高中班聯會，在這裡你可以找到所有你需要的資訊，從校園活動到福利優惠，一手掌握最即時的學生會動態！">
+   <meta charset="UTF-8">
+  <meta name="description" content="花中班聯會官方網站，提供最新活動消息、學生權益資訊與校園公告。">
+  <meta name="keywords" content="花中班聯會, 學生自治, 校園活動, 學校公告, 花蓮高中">
+  <meta name="author" content="花中班聯會">
   <title>花中班聯會官方網站</title>
   
   <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -103,3 +104,4 @@
 </script>
 </body>
 </html>
+
