--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="footer-section">
           <h3>聯絡我們</h3>
-          <p>電子郵件：<a href="mailto:hlhssc@gmail.com">hlhssc@gmail.com</a></p>
+          <p>電子郵件：<a href="mailto:ofstud09@hlhs.hlc.edu.tw">ofstud09@hlhs.hlc.edu.tw</a></p>
           <p>地址：花蓮縣花蓮市民權路42號</p>
         </div>
       </div>
@@ -104,4 +104,5 @@
 </script>
 </body>
 </html>
+
 
