--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="description" content="花中班聯會官方網站，提供最新活動消息、學生權益資訊與校園公告。">
   <meta name="keywords" content="花中班聯會, 學生自治, 校園活動, 學校公告, 花蓮高中">
   <meta name="author" content="花中班聯會">
+  <meta name="google-site-verification" content="1XtcNv2TYzS0j2mBinJC-SU4gXSgzxYWA-_GZvpZlCE" />
   <title>花中班聯會官方網站</title>
   
   <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -104,5 +105,6 @@
 </script>
 </body>
 </html>
+
 
 
