--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 
   <div class="team-row">
     <div class="team-member leader">
-      <h3>執行秘書</h3>
+      <h3>總幹事</h3>
       <p>馬翌友</p>
     </div>
     <div class="team-member leader">
@@ -175,3 +175,4 @@
 </script>
 </body>
 </html>
+
