--- a/about.html
+++ b/about.html
@@ -109,21 +109,21 @@
   <div class="team-row">
     <div class="team-member leader-solo">
       <h3>資訊組</h3>
-      <p>賴品言、游定程</p>
+      <p>賴品言、游定程、游舜文</p>
     </div>
     <div class="team-member leader">
       <h3>公關組</h3>
-      <p>李姍霓、謝宗辰</p>
+      <p>李姍霓、謝宗辰、余樂、陳台紳</p>
     </div>
     <div class="team-member leader">
         <h3>活動組</h3>
-        <p>孫世宇、黃樹</p>
+        <p>孫世宇、黃樹、施柏宇、張瀚元、江育鴻</p>
     </div>
   </div>
   <div class="team-row">
     <div class="team-member leader-solo">
       <h3>美萱組</h3>
-      <p>楊晏丞、許家愷</p>
+      <p>許家愷、黃淳楷</p>
     </div>
     <div class="team-member leader">
       <h3>攝影組</h3>
@@ -175,4 +175,5 @@
 </script>
 </body>
 </html>
+
 
