--- a/index.html
+++ b/index.html
@@ -66,7 +66,22 @@
             </ul>
         </div>
         </section>
+
+        <section id="news-container">
+         <div class="news-content">
+             <ul>
+                 <li>
+                 <div class="news-item">
+                   <h3 class="news-title">優惠訊息</h3>
+                   <p class="news-text">我們有和許多商家簽約，只要出示學生證就能獲得優惠，詳情請看https://reurl.cc/z5jzoN</p>
+                 </div>
+                 </li>
+             </ul>
+         </div>
+        </section>
     </div>
+
+   
 
     <footer>
       <div class="footer-container">
@@ -105,6 +120,7 @@
 </script>
 </body>
 </html>
+
 
 
 
