--- a/events.html
+++ b/events.html
@@ -66,7 +66,7 @@
           <div class="event-item">
             <div class="event-date">
               <span class="month">9月</span>
-              <span class="day">待定</span>
+              <span class="day">13</span>
             </div>
             <div class="event-details">
               <h3>社團幹部訓練</h3>
@@ -79,7 +79,7 @@
           <div class="event-item">
             <div class="event-date">
               <span class="month">9月</span>
-              <span class="day">待定</span>
+              <span class="day">24</span>
             </div>
             <div class="event-details">
               <h3>敬師迎新</h3>
@@ -128,3 +128,4 @@
 </script>
 </body>
 </html>
+
