--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
         <h2>線上聯絡表單</h2>
         <p class="form-instruction">請填寫以下表單，我們將會盡快回覆。</p>
         
-        <iframe src="https://reurl.cc/VWvXbn" width="100%" height="854" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSev17vAj-ACO7TQMzTSHUowgBi87AJtvTZZCQ_OhLX8zJMdnA/viewform?fbclid=PAZXh0bgNhZW0CMTEAAaehWp-aI4ZejkYvrgwADFoJxAJ3oW2vvGZIYVSPn8u6AxJ1mA5toGr9OFkNEw_aem_qB5ia02cL8l8IodTDNIUyg" width="100%" height="854" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
 
       </section>
     </main>
@@ -113,5 +113,6 @@
 </script>
 </body>
 </html>
+
 
 
