--- a/index.html
+++ b/index.html
@@ -81,7 +81,19 @@
         </section>
     </div>
 
-   
+    <section id="news-container">
+         <div class="news-content">
+             <ul>
+                 <li>
+                 <div class="news-item">
+                   <h3 class="news-title">外送試辦</h3>
+                   <p class="news-text">9/26為外送方式的試營運</p>
+                 </div>
+                 </li>
+             </ul>
+         </div>
+        </section>
+    </div>
 
     <footer>
       <div class="footer-container">
@@ -120,6 +132,7 @@
 </script>
 </body>
 </html>
+
 
 
 
