--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                  <li>
                  <div class="news-item">
                    <h3 class="news-title">外送試辦</h3>
-                   <p class="news-text">9/26為外送方式的試營運</p>
+                   <p class="news-text">9/26為外送方式的試營運，讓未來開放外送的可能成真</p>
                  </div>
                  </li>
              </ul>
@@ -132,6 +132,7 @@
 </script>
 </body>
 </html>
+
 
 
 
