--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta charset="UTF-8">
+  <meta name="description" content="花中班聯會官方網站，提供最新活動消息、學生權益資訊與校園公告。">
+  <meta name="keywords" content="花中班聯會, 學生自治, 校園活動, 學校公告, 花蓮高中">
+  <meta name="author" content="花中班聯會">
+  <meta name="google-site-verification" content="1XtcNv2TYzS0j2mBinJC-SU4gXSgzxYWA-_GZvpZlCE" />
   <title>花中班聯會官方網站</title>
-  <meta name="description" content="需要聯絡花蓮高中班聯會？透過我們的電子郵件、地址或線上表單，快速取得聯繫並提出你的建議與疑問。">
   
   <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="style.css"></noscript>
@@ -15,10 +17,12 @@
 <body>
     <div class="top-layer">
         <header>
-        <h1>
-            <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
-            花中班聯會官方網站
-        </h1>
+    <h1>
+      <a href="index.html" class="brand-link">
+        <img src="images/Logo_HLHS.png" alt="花中班聯會 Logo" class="logo" />
+        花中班聯會官方網站
+      </a>
+    </h1>
         <button class="hamburger" id="hamburger">
             <i class="fas fa-bars"></i>
         </button>
