Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <ul>
                         <li>
                             <div class="news-item">
-                                <h3 class="news-title">外送試辦</h3>
-                                <p class="news-text text-xl">9/26為外送的第一次試營運，請大家多多參加</p>
+                                <h3 class="news-title">星光歌唱</h3>
+                                <p class="news-text text-xl">12/11、12/12兩天為星光歌唱複賽，歡迎高二的同學來現場觀看</p>
                             </div>
                         </li>
                     </ul>
@@ -89,8 +89,8 @@
                     <ul>
                         <li>
                             <div class="news-item">
-                                <h3 class="news-title">外送試辦</h3>
-                                <p class="news-text text-xl">10/31為外送試辦的第二次，請同學踴躍參與</p>
+                                <h3 class="news-title">聖誕傳情</h3>
+                                <p class="news-text text-xl">12/15~19是聖誕傳情，同學可以寫下卡片給你重視的朋友</p>
                             </div>
                         </li>
                     </ul>
@@ -151,6 +151,7 @@
 </script>
 </body>
 </html>
+
 
 
 
