Update events information in events.html
Added new events for December and updated existing event details.

--- a/events.html
+++ b/events.html
@@ -53,6 +53,32 @@
         <h2>活動資訊大綱</h2>
         <div class="events-list">
           <!-- 最新（由新到舊排序）：10/31, 9/26, 9/24, 9/13, 8/26-27 -->
+           <div class="event-item">
+            <div class="event-date">
+              <span class="month">12月</span>
+              <span class="day">15~19</span>
+            </div>
+            <div class="event-details">
+              <h3>聖誕傳情</h3>
+              <p>
+                與其他高中合作，讓同學能寫下卡片送給重視的人。
+              </p>
+            </div>
+          </div>
+          
+           <div class="event-item">
+            <div class="event-date">
+              <span class="month">12月</span>
+              <span class="day">11、12</span>
+            </div>
+            <div class="event-details">
+              <h3>星光歌唱</h3>
+              <p>
+                星光歌唱複賽，讓高二的同學一展自己的歌喉。
+              </p>
+            </div>
+          </div>
+          
           <div class="event-item">
             <div class="event-date">
               <span class="month">10月</span>
@@ -158,5 +184,6 @@
 </body>
 </html>
 *** End Patch
+
 
 
